--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@pontusab/react-native-media-library",
+  "name": "indie-discovery/react-native-media-library",
   "author": "Pontus Abrahamsson",
   "version": "1.0.6",
   "description": "Provides access to user's media library.",
-  "homepage": "https://github.com/pontusab/react-native-media-library",
+  "homepage": "https://github.com/indie-discovery/react-native-media-library",
   "main": "build/MediaLibrary.js",
   "types": "build/MediaLibrary.d.ts",
   "license": "MIT",
